<resources>
    <string name="app_name">Medical Assistance</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_medicine_reminder">Medicine Reminder</string>
    <string name="menu_share_location">Share Location</string>
    <string name="menu_medicine_inventory">Medicine Inventory</string>
    <string name="menu_nearby_hospitals">Nearby Hospitals</string>
    <string name="menu_nearby_pharmacies">Nearby Pharmacies</string>
    <string name="menu_emergency">Emergency Training</string>

    <string name="action_home">Home</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_about_us">About Us</string>
    <string name="action_logout">Logout</string>

    <string name="title">Medicine Reminder</string>
    <string name="managemedicine">Manage Medicine</string>
    <string name="medicine_review">Medicine Review</string>
    <string name="setting">Setting</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="dateformate">dd/MM/yyyy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_prompt">Select one</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name">Medicine name</string>
    <string name="schedule">Schedule</string>
    <string name="start_date">Start date</string>
    <string name="duration">Duration</string>
    <string name="minus">-</string>
    <string name="duration_days">Duration(days)</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="medicine_type">Select Medicine Type</string>
    <string name="no_medicine_found">No medicine found</string>
    <string name="medicine_dashboard">Medicine Dashboard</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="resedule">Resedule</string>
    <string name="not_taken">Not taken</string>
    <string name="taken">Taken</string>
    <string name="all_medicine">All medicine</string>
    <string name="period_tracker">Period Tracker</string>

    <string name="contact_us_detail">is the solution for the emergency situations and provides valuable features that help to handle the emergency conditions and to communicate the doctor for the routine checkup.</string>
    <string name="contactus_detail">Medical Assistance is the solution for the emergency situations and provides valuable features that help to handle the emergency conditions and to communicate the doctor for the routine checkup.</string>
    <string name="about_us">Medical assistance provide ease to patient community.\nOur main aim is to provide maximum assistance to the patients in case of emergency.  </string>
    <string name="action_register_patient">Register Patient</string>
    <string name="action_patients_list">Patients List</string>
    <string name="action_my_doctors">My Doctors</string>
    <string name="action_emergency_call">Make Emergency Call</string>
    <string-array name="schedule_arrays">
        <item>Once a day</item>
        <item>Twice a day</item>
        <item>3 times a day</item>
        <item>4 times a day</item>
        <item>5 times per day</item>


    </string-array>
    <string-array name="take_arrays">
        <item>Tablet</item>
        <item>Insulin</item>
    </string-array>
    <string-array name="tablet_arrays">
        <item>1 tab</item>
        <item>2 tab</item>
        <item>3 tab</item>
        <item>4 tab</item>

    </string-array>
    <string-array name="liquied_arrays">
        <item>0.5 ml</item>
        <item>1.00 ml</item>
        <item>1.25 ml</item>
        <item>1.50 ml</item>
        <item>1.75 ml</item>
        <item>2.00 ml</item>

    </string-array>
</resources>
