<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.HomeDrawerActivity"
    tools:showIn="@layout/app_bar_home_drawer">

    <FrameLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:padding="20dp"
                    android:background="@drawable/gradient_animation"
                    android:textColor="@color/WHITE"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="20dp"
                    android:columnCount="2"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardNearByHospitals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_margin="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="20dp"
                                app:srcCompat="@drawable/ic_hospital" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_nearby_hospitals" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardNearByPharmacies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_margin="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="20dp"
                                app:srcCompat="@drawable/ic_pharmacy" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_nearby_pharmacies" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardEmergencyTraining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_margin="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="20dp"
                                app:srcCompat="@drawable/ic_first_aid_kit" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_emergency" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardMedicineReminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:layout_margin="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="20dp"
                                app:srcCompat="@drawable/ic_reminder" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_medicine_reminder" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardMedicineInventory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:layout_margin="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="20dp"
                                app:srcCompat="@drawable/ic_inventory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_medicine_inventory" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardShareLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_margin="5dp"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="20dp"
                                app:srcCompat="@drawable/ic_share_location" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_share_location" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </GridLayout>

            </RelativeLayout>

        </ScrollView>

    </FrameLayout>

</RelativeLayout>