<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".reminder.activity.AddMedicineActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/MyToolbarStyle"
        app:popupTheme="@style/Theme.AppCompat.NoActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/add_medicine"
                android:textColor="@color/WHITE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="closeAddMedicineActivity"
                android:src="@drawable/ic_close_black_24dp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:foregroundGravity="center"
                android:minHeight="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/medicine_name"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/MedicineNameET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:background="@drawable/edit_text_style"
                        android:gravity="center"
                        android:hint="Medicine Name Here"
                        android:padding="6dp"
                        android:textColor="@color/black2"
                        android:textColorHint="@color/black2" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:minHeight="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/schedule"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/ScheduleSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/edit_text_style"
                        android:entries="@array/schedule_arrays"
                        android:gravity="center"
                        android:spinnerMode="dialog" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/schedueRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:minHeight="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/start_date"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/lightPink">

                        <TextView
                            android:id="@+id/PickDateTv"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/edit_text_style"
                            android:gravity="center"
                            android:minWidth="150dp"
                            android:text="Pick date"
                            android:textColor="@color/black2"
                            android:textSize="16sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:minHeight="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/duration_days"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:gravity="center"
                            android:onClick="negativeClick"
                            android:text="@string/minus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat"
                            android:textColor="@color/WHITE" />

                        <EditText
                            android:id="@+id/DurationET"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_style"
                            android:gravity="center"
                            android:inputType="number"
                            android:text="@string/_0"
                            android:textAllCaps="false" />

                        <Button
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:drawableTint="@color/black2"
                            android:gravity="center"
                            android:onClick="posotiveClick"
                            android:text="@string/plus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat"
                            android:textColor="@color/WHITE" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:minHeight="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/medicine_type"
                        android:textColor="#277edf"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/TabletOrLiquiedSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/take_arrays"
                            android:spinnerMode="dialog"
                            android:background="@drawable/edit_text_style"/>

                        <Spinner
                            android:id="@+id/TabletOrLiquiedQuantitySpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_style"
                            android:spinnerMode="dialog"
                            android:layout_marginLeft="3dp"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/SubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:onClick="clickOnSubmit"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/WHITE"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>